<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">妙看</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="userName">用户名</string>
    <string name="entryName">请输入已注册的手机号或邮箱</string>
    <string name="userPass">密   码</string>
    <string name="newPass">新密码</string>
    <string name="entryPass">请输入密码</string>
    <string name="setPass">请输入新密码</string>
    <string name="signin">立即登录</string>
    <string name="signup">立即注册</string>
    <string name="forgetPass">忘记密码？</string>
    <string name="updatePass">修改密码</string>
    <string name="register">注册</string>
    <string name="cell">手机注册</string>
    <string name="mail">邮箱注册</string>
    <string name="phone">手机号</string>
    <string name="entryCell">请输入真实手机号</string>
    <string name="check">验证码</string>
    <string name="entryCheck">请输入收到的验证码</string>
    <string name="createPass">6-20位数字、字母组合，可包含下划线</string>
    <string name="again">确认密码</string>
    <string name="entryAgain">请再次输入密码</string>
    <string name="tip">注册即视为同意妙看APP《隐私条款》</string>
    <string name="already">已有账号？</string>
    <string name="email">邮箱</string>
    <string name="entryMail">请输入真实邮箱</string>
    <string name="get">获取</string>
    <string name="my">我的</string>
    <string name="film">电影</string>
    <string name="filmName">电影名</string>
    <string name="director">导演</string>
    <string name="cast">演职员信息</string>
    <string name="buy">购票</string>
    <string name="filmEng">英文电影名</string>
    <string name="classify">电影分类</string>
    <string name="country">国家 | 时长</string>
    <string name="date">上映日期</string>
    <string name="buyNow">立即购票</string>
    <string name="wait">电影描述 这里展示的是折叠文本区</string>
    <string name="unfold">展开</string>
    <string name="actor">演员名</string>
    <string name="role">角色名</string>
    <string name="more">查看全部演职人员</string>
    <string name="box_office">票房</string>
    <string name="ranking">票房排行</string>
    <string name="weekly">周票房 (万)</string>
    <string name="total">累计票房 (万)</string>
    <string name="comment">赞~</string>
    <string name="commenting">写影评</string>
    <string name="time">05-04 17:15</string>
    <string name="cinema">影院名</string>
    <string name="address">影院地址</string>
    <string name="last">时长</string>
    <string name="language">语言</string>
    <string name="price">票价</string>
    <string name="selectable">可选</string>
    <string name="selected_already">已选</string>
    <string name="sold_already">已售</string>
    <string name="screen">VIP影厅 - 银幕</string>
    <string name="lock">确认选座</string>
    <string name="phone_number">136****3698</string>
    <string name="tewnty">20</string>
    <string name="yuan">元</string>
    <string name="video_hall">VIP影厅</string>
    <string name="seat">座位</string>
    <string name="rule">退票改签须知</string>
    <string name="cant">不可改签</string>
    <string name="to_pay">应付</string>
    <string name="pay">立即付款</string>
    <string name="pay_the_bill">支付订单</string>
    
</resources>