<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" >
	    <TextView
	        android:id="@+id/cell_tv_name"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:layout_weight="2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/phone"/>
	    <EditText
            android:id="@+id/cell_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/entryCell" >
            <requestFocus />
          </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >
        <TextView
            android:id="@+id/cell_tv_check"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check" />
        <EditText
            android:id="@+id/cell_et_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/entryCheck" />
        <Button
            android:id="@+id/cell_btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:text="@string/get" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >
        <TextView
            android:id="@+id/cell_tv_pss"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/userPass" />
        <EditText
            android:id="@+id/cell_et_pss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/createPass"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >
        <TextView
            android:id="@+id/cell_tv_again"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/again" />
        <EditText
            android:id="@+id/cell_et_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/entryAgain"
            android:inputType="textPassword" />
    </LinearLayout>
    <Button
        android:id="@+id/cell_btn_register"
        android:background="@drawable/btn_signup"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:text="@string/register" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/cell_tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip" />
    
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" >
        <TextView
            android:id="@+id/cell_tv_ask"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/already" />

        <Button
            android:id="@+id/cell_btn_login"
            android:textSize="20sp"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signin" />

    </LinearLayout>
    
</LinearLayout>
