<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <Button
        android:id="@+id/detail_btn_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/btn_buy_now"
        android:text="@string/buyNow" />

    <TextView
        android:id="@+id/detail_tv_fold"
        android:paddingLeft="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wait" />

    <Button
        android:id="@+id/detail_btn_unfold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/wwlogo"
        android:background="@drawable/detail_btn"
        android:text="@string/unfold" />

    <TextView
        android:id="@+id/detail_tv_cast"
        android:paddingLeft="12dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cast" />

</LinearLayout>
