<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/pass_tv_name"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/userName" />
        <EditText
            android:id="@+id/pass_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/entryName" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >
        <TextView
            android:id="@+id/pass_tv_pass"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/newPass" />
        <EditText
            android:id="@+id/pass_et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/setPass"
            android:inputType="textPassword" >
		</EditText>
    </LinearLayout>

    <Button
        android:id="@+id/update_btn_login"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_buy_now"
        android:text="@string/updatePass" />

    

</LinearLayout>
