<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="290dp" >

    <ImageView
        android:id="@+id/detail_iv_post"
        android:layout_width="200dp"
        android:layout_height="280dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/film_1" />

    <TextView
        android:id="@+id/detail_tv_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/detail_iv_post"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/detail_iv_post"
        android:text="@string/filmName" />

    <TextView
        android:id="@+id/detail_tv_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/detail_iv_post"
        android:layout_below="@+id/detail_tv_film"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/filmEng" />

    <TextView
        android:id="@+id/detail_tv_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/detail_iv_post"
        android:layout_below="@+id/detail_tv_eng"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/classify" />

    <TextView
        android:id="@+id/detail_tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/detail_iv_post"
        android:layout_below="@+id/detail_tv_class"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/country" />
    
    <TextView
        android:id="@+id/detail_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/detail_iv_post"
        android:layout_below="@+id/detail_tv_country"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/date" />

</RelativeLayout>
