<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/home_iv_film"
        android:layout_width="150dp"
        android:layout_height="195dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/film" />

    <TextView
        android:id="@+id/home_tv_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/home_iv_film"
        android:layout_alignTop="@+id/home_iv_film"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:text="@string/filmName" />

    <TextView
        android:id="@+id/home_tv_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_tv_film"
        android:layout_below="@+id/home_tv_film"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textColor="@color/gray" 
        android:text="@string/director"/>

    <TextView
        android:id="@+id/home_tv_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_tv_director"
        android:layout_below="@+id/home_tv_director"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:textColor="@color/gray" 
        android:text="@string/cast" />
	<!-- 解决不能选中的问题 那按钮还管用吗 -->
    <Button
        android:id="@+id/home_btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:textColor="@color/wwlogo"
        android:background="@drawable/btn_buy"
        android:textSize="18sp"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:text="@string/buy" />

</RelativeLayout>
